--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,15 @@
     --clr-background: 185 41 84;
     --clr-dark-cyan: 183 100 15;
     --clr-text-label: 186 14 43;
-    --clr-light: 185 38 97;
+    --clr-bg-input: 185 38 97;
+    --clr-custom-text: 180 18 40;
     --clr-pale-cyan: 184 19 68;
 
+    --ff-primary: 'Space Mono', monospace;
     --fs-form: 1.5rem;
 
-    --fw-primary: 700;
+    --fw-regular: 400;
+    --fw-bold: 700;
 
     --fs-form-input: 1.5rem;
 }
@@ -88,6 +91,7 @@ textarea:not([rows]) {
 }
 
 body {
+    font-family: var(--ff-primary);
     background-color: hsl(var(--clr-background));
     color: #FFFFFF;
     margin-inline: 0;
@@ -124,10 +128,27 @@ body {
 }
 
 .input {
+    font-size: var(--fs-form);
+    font-weight: var(--fw-bold);
+    background-color: hsl(var(--clr-bg-input));
+    color: hsl(var(--clr-dark-cyan));
+    text-align: right;
     width: 100%;
     height: 48px;
     border-color: transparent;
-    background-color: hsl(var(--clr-light));
+    outline: none;
+}
+
+.input:hover {
+    cursor: pointer;
+    border-color: hsl(var(--clr-primary));
+    border-radius: 5px;
+    outline: none;
+}
+
+.input:focus {
+    /* border-color: hsl(var(--clr-primary)); */
+    outline: none;
 }
 
 .tip-percentage {
@@ -136,9 +157,16 @@ body {
     border-radius: 5px;
     color: #FFFFFF;
     font-size: 1.5rem;
-    padding: .25em 2em;
+    padding: .45em 2em;
     width: 9.164375rem;
     margin: .25em;
+}
+
+#custom-tip {
+    background-color: hsl(var(--clr-bg-input));
+    color: hsl(var(--clr-dark-cyan));
+    margin-block: 0;
+    padding: 0 .5em 0 0;
 }
 
 .result {
@@ -157,6 +185,7 @@ body {
 
 .span {
     font-size: 2em;
+    color: hsl(var(--clr-pale-cyan));
 }
 
 .small {
@@ -164,6 +193,7 @@ body {
 }
 
 .reset {
+    font-size: 1.25rem;
     width: 100%;
     height: 48px;
     background-color: hsl(var(--clr-pale-cyan));
