--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --clr-bg-input: 185 38 97;
     --clr-custom-text: 180 18 40;
     --clr-pale-cyan: 184 19 68;
+    --clr-white: 0 0 100;
 
     --ff-primary: 'Space Mono', monospace;
     --fs-form: 1.5rem;
@@ -91,34 +92,39 @@ textarea:not([rows]) {
 }
 
 body {
-    font-family: var(--ff-primary);
     background-color: hsl(var(--clr-background));
-    color: #FFFFFF;
+    color: hsl(var(--clr-white));
+    font-family: var(--ff-primary);
     margin-inline: 0;
     padding-inline: 0;
 }
 
 .main {
-    margin-inline: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-inline: 0;
 }
 
 .logo {
-    /* height: 33%; */
     margin-block: 2em;
 }
 
 .container {
-    padding: 1em;
-    background-color: #FFFFFF;
+    background-color: hsl(var(--clr-white));
     border-radius: 20px 20px 0 0;
+    padding: 1em;
     width: 100%;
     height: 66%;
     position: relative;
     bottom: 0;
+}
+
+.num-people-labels {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .label {
@@ -127,50 +133,71 @@ body {
     margin-block: 1em;
 }
 
+.error {
+    visibility: hidden;
+    text-align: right;
+    color: red;
+}
+
 .input {
-    font-size: var(--fs-form);
-    font-weight: var(--fw-bold);
     background-color: hsl(var(--clr-bg-input));
     color: hsl(var(--clr-dark-cyan));
+    border-color: transparent;
+    font-size: var(--fs-form);
+    font-weight: var(--fw-bold);
     text-align: right;
     width: 100%;
     height: 48px;
-    border-color: transparent;
     outline: none;
+}
+
+#billInput,
+#peopleInput {
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: .75em;
 }
 
 #billInput {
     background-image: url(./images/icon-dollar.svg);
-    background-repeat: no-repeat;
-    background-position-y: center;
 }
 
+#peopleInput {
+    background-image: url(./images/icon-person.svg);
+}
+
+
+
 .input:hover {
-    cursor: pointer;
-    border-color: hsl(var(--clr-primary));
     border-radius: 5px;
     outline: none;
 }
 
 .input:focus {
-    /* border-color: hsl(var(--clr-primary)); */
     outline: none;
 }
 
 .tip-percentage {
     background-color: hsl(var(--clr-dark-cyan));
+    color: hsl(var(--clr-white));
     border: none;
     border-radius: 5px;
-    color: #FFFFFF;
     font-size: 1.5rem;
+    margin: .25em;
     padding: .45em 2em;
     width: 9.164375rem;
-    margin: .25em;
+}
+
+button,
+.input:hover,
+.tip-percentage:hover,
+.tip-percentage:focus {
+    cursor: pointer;
 }
 
 .tip-percentage:hover,
 .tip-percentage:focus {
-    background-color: hsl(var(--clr-primary));
+    background-color: hsl(var(--clr-pale-cyan));
     color: hsl(var(--clr-dark-cyan));
 }
 
@@ -178,20 +205,14 @@ body {
     background-color: hsl(var(--clr-bg-input));
     color: hsl(var(--clr-dark-cyan));
     margin-block: 0;
-    padding: 0 .5em 0 0;
-}
-
-#peopleInput {
-    background-image: url(./images/icon-person.svg);
-    background-repeat: no-repeat;
-    background-position-y: center;
+    padding: 0 0.5em 0 0;
 }
 
 .result {
+    background-color: hsl(var(--clr-dark-cyan));
+    color: hsl(var(--clr-white));
     margin-block-start: 1em;
     padding: 1em;
-    background-color: hsl(var(--clr-dark-cyan));
-    color: #FFFFFF;
     border-radius: 10px;
 }
 
@@ -202,8 +223,8 @@ body {
 }
 
 .span {
-    font-size: 2em;
     color: hsl(var(--clr-pale-cyan));
+    font-size: 2em;
 }
 
 .small {
@@ -211,15 +232,22 @@ body {
 }
 
 .reset {
-    font-size: 1.25rem;
-    width: 100%;
-    height: 48px;
     background-color: hsl(var(--clr-pale-cyan));
+    color: hsl(var(--clr-dark-cyan));
     border-color: transparent;
     border-radius: 5px;
+    font-size: 1.25rem;
+    font-weight: var(--fw-bold);
+    width: 100%;
+    height: 48px;
 }
 
 @media (min-width: 30rem) {
+
+    .input:hover {
+        border-color: hsl(var(--clr-primary));
+    }
+
     .tip-percentage {
         font-weight: var(--fw-bold);
     }
